--- a/Webserver/Dockerfile
+++ b/Webserver/Dockerfile
@@ -1,5 +1,5 @@
 FROM node:12-alpine
-RUN apk add --no-cache add http-server
+RUN apk add --no-cache add httpd
 COPY index.html /var/www/html/
 RUN yarn install --production
 CMD ["http-server"]
