--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,5 +19,5 @@ jobs:
     - name: Build the Docker image
       run: |
         docker build . --file Dockerfile --tag nginx-docker:latest
-        docker run ghcr.io/TheQuib/nginx-docker:latest
-        docker push ghcr.io/TheQuib/nginx-docker:latest
+        docker run ghcr.io/thequib/nginx-docker:latest
+        docker push ghcr.io/qhequib/nginx-docker:latest
