--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI
+name: Publish Container
 
 on:
   push:
@@ -16,8 +16,16 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v1
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor}}
+        password: ${{ secrets.GitHub-Packages-Container-Registry  }}
+    
     - name: Build the Docker image
       run: |
-        docker build . --file Dockerfile --tag nginx-docker:latest
+        docker build . --file Dockerfile --tag ghcr.io/thequib/nginx-docker:latest
         docker run ghcr.io/thequib/nginx-docker:latest
         docker push ghcr.io/qhequib/nginx-docker:latest
