--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,24 +5,19 @@ on:
     branches: [ chief ]
   pull_request:
     branches: [ chief ]
-  release:
-    types: [ published ]
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
-    
+  
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v1
       with:
         registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GitHub-Packages-Container-Registry  }}
+        username: TheQuib
+        password: ${{ secrets.GH_CONTAINER_REGISTRY_SECRET  }}
     
     - name: Build the Docker image
       run: |
