--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,17 +10,30 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+
+    - name: Checkout
+      uses: actions/checkout@v2
   
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v1
       with:
         registry: ghcr.io
         username: TheQuib
-        password: ${{ secrets.GH_CONTAINER_REGISTRY_SECRET  }}
+        password: ${{ secrets.GH_CONTAINER_REGISTRY_SECRET }}
+
+    - name: Login to Dockerhub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DH_USERNAME }}
+        password: ${{ secrets.DH_TOKEN }}
     
     - name: Build the Docker image
-      run: |
-        docker build . --file Dockerfile --tag ghcr.io/thequib/nginx-docker:latest
-        docker run ghcr.io/thequib/nginx-docker:latest
-        docker push ghcr.io/qhequib/nginx-docker:latest
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        file: ./Dockerfile
+        platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6
+        push: true
+        tags: |
+          ghcr.io/TheQuib/nginx-docker:latest
+          thequib/nginx-docker:latest
