--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -35,5 +35,5 @@ jobs:
         platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6
         push: true
         tags: |
-          ghcr.io/TheQuib/nginx-docker:latest
+          ghcr.io/qhequib/nginx-docker:latest
           thequib/nginx-docker:latest
