--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,7 +18,7 @@ jobs:
       uses: docker/login-action@v1
       with:
         registry: ghcr.io
-        username: TheQuib
+        username: ${{ secrets.GH_CONTAINER_REGISTRY_USER }}
         password: ${{ secrets.GH_CONTAINER_REGISTRY_SECRET }}
 
     - name: Login to Dockerhub
