--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,18 +21,10 @@ jobs:
         username: ${{ secrets.GH_CONTAINER_REGISTRY_USER }}
         password: ${{ secrets.GH_CONTAINER_REGISTRY_SECRET }}
 
-    - name: Login to Dockerhub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DH_USERNAME }}
-        password: ${{ secrets.DH_TOKEN }}
-    
     - name: Build the Docker image
       uses: docker/build-push-action@v2
       with:
         context: .
         file: ./Dockerfile
         push: true
-        tags: |
-          thequib/nginx-docker:latest
-          ghcr.io/${{ secrets.GH_CONTAINER_REGISTRY_USER}}/nginx-docker:latest
+        tags: ghcr.io/thequib/nginx-docker:latest
