Change to branch name 'main'

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,9 +2,7 @@ name: Publish Container
 
 on:
   push:
-    branches: [ chief ]
-  pull_request:
-    branches: [ chief ]
+    branches: [ main ]
 
 jobs:
   build:
